log

Mon 14 Aug 2023 02:36:20 AM UTC: 
 exercises.c | 30 +++++++++++++++++++++++++++---
 1 file changed, 27 insertions(+), 3 deletions(-)
 tests:  0|6
total_score: 10/70
0a83823
Mon 14 Aug 2023 02:51:24 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
2fafc7c
Mon 14 Aug 2023 02:53:53 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
48faed6
Mon 14 Aug 2023 02:54:42 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:5: error: implicit declaration of function ‘print’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   33 |     print("a");
      |     ^~~~~
      |     printf
cc1: all warnings being treated as errors
Compilation failed
6b2f601
Mon 14 Aug 2023 02:55:00 AM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
301fa28
Mon 14 Aug 2023 02:55:40 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
1fbaa5c
Mon 14 Aug 2023 02:56:46 AM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
ea50711
Mon 14 Aug 2023 03:02:46 AM UTC: 
 exercises.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|0
5df60b2
Mon 14 Aug 2023 03:08:01 AM UTC: 
 exercises.c | 11 ++++++++---
 1 file changed, 8 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 20/70
340e78d
Mon 14 Aug 2023 03:08:53 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 20/70
4fa9473
Mon 14 Aug 2023 03:11:16 AM UTC: 
 exercises.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  0|4
total_score: 30/70
8b3238c
Mon 14 Aug 2023 03:16:04 AM UTC: 
 exercises.c | 22 +++++-----------------
 1 file changed, 5 insertions(+), 17 deletions(-)
 tests:  0|5
total_score: 20/70
ac479da
Mon 14 Aug 2023 03:19:11 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
907376e
Mon 14 Aug 2023 03:19:57 AM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|5
total_score: 20/70
5334872
Mon 14 Aug 2023 03:20:19 AM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|4
total_score: 30/70
3dd1ac8
Mon 14 Aug 2023 03:28:49 AM UTC: 
 exercises.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  0|0
4dc7f48
